#689 - Improved Error Handling
- rename structured query to ccdl
