# src/main/java/de/numcodex/feasibility_gui_backend/query/api/validation/CcdlValidation.java
@@ -10,9 +10,9 @@ import java.lang.annotation.Target;
 
 @Target({ElementType.TYPE})
 @Retention(RetentionPolicy.RUNTIME)
-@Constraint(validatedBy = StructuredQueryValidator.class)
-public @interface StructuredQueryValidation {
-  String message() default "Structured query is invalid";
+@Constraint(validatedBy = CcdlValidator.class)
+public @interface CcdlValidation {
+  String message() default "CCDL is invalid";
 
   Class<?>[] groups() default {};
 
